<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">saostar</string>
    <string name="view_data">Nothing</string>
    <string name="id">ID : </string>
    <string name="user_stream">UserStream</string>
    <string name="realtime_update">Real-time update</string>
    <string name="edit_account">Edit Account</string>
    <string name="remove_account">Remove this account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="login">Login</string>
    <string name="waiting_for_you_to_authorize">Waiting for you to authorize…</string>
    <string name="getting_token">Getting token…</string>
    <string name="get_token_failed">Get token failed. A few days later, if you cannot get token, please contact the author.</string>
    <string name="error">Error</string>
    <string name="accounts">Accounts</string>
    <string name="registered_accounts">Registered accounts</string>
    <string name="add_account">Add account</string>
    <string name="whats_happening">What\'s Happening?</string>
    <string name="update_status">Tweet</string>
    <string name="tweeting">Tweeting…</string>
    <string name="tweet_failed">Tweet failed</string>
    <string name="select_account_to_use">Select account to use</string>
    <string name="reply_to">Reply to</string>
    <string name="colon">:</string>
    <string name="kuzu">(^o^)v ＜ I am scrap of human because I collected $exp$ experience points</string>
    <string name="accounts_have_not_been_added">Accounts have not been added</string>
    <string name="refresh_setting">Refresh setting</string>
    <string name="account_action">Account action</string>
    <string name="tabs_have_not_been_added">Tabs have not been added</string>
    <string name="arguments_have_problem">$funcName$ function: Arguments have problem.</string>
    <string name="query_ended_in_unexpected_position">Query ended in unexpected position.</string>
    <string name="cannot_use_other_than_prop_and_func">Cannot use other than "prop:" and "func:"</string>
    <string name="operator_is_not_found_or_type_has_not_matched">$opId$ operator is not found or type has not matched.</string>
    <string name="tabs">Tabs</string>
    <string name="edit_tab">Edit tab</string>
    <string name="general_setting">General</string>
    <string name="tab_name">Tab\'s name</string>
    <string name="filter_setting">Filter</string>
    <string name="about_filter">About filter</string>
    <string name="query_is_nothing">Query is nothing</string>
    <string name="query_successfully_parsed">Query successfully parsed</string>
    <string name="parsing_query_failed">Parsing query failed：</string>
    <string name="return_type_is_not_boolean">Return type is not Boolean.</string>
    <string name="add_tab">Add tab</string>
    <string name="attachment_picture">Attachment picture</string>
    <string name="attach_picture">Attach picture</string>
    <string name="couldnt_open_picture_file">Couldn\'t open picture file.</string>
    <string name="cannot_attach_over_2_pictures">Cannot attach over 2 pictures.</string>
    <string name="upload_to_twitpic">Upload to Twitpic</string>
    <string name="upload_to_yfrog">Upload to yfrog</string>
    <string name="upload_to_hatena_fotolife">Upload to Hatena Fotolife</string>
    <string name="remove">Remove</string>
    <string name="uploading_picture">Uploading picture…</string>
    <string name="couldnt_upload_picture">Couldn\'t upload picture</string>
    <string name="hatena_fotolife_application_has_not_been_installed">Hatena Fotolife application has not been installed.</string>
    <string name="hatena_fotolife_supports_only_jpeg">Hatena Fotolife supports only JPEG.</string>
    <string name="remove_this_tab">Remove this tab</string>
    <string name="attachment_location">Attachment location</string>
    <string name="show_the_location_in_map">Show the location in map</string>
    <string name="getting_location">Getting location…</string>
    <string name="a_application_to_show_map_has_not_been_installded">A application to show map has not been installed.</string>
    <string name="attach_location">Attach location</string>
    <string name="your_device_cannot_be_used_location_service_or_location_service_is_not_enabled">Your device cannot be used location service or location service is not enabled.</string>
    <string name="favoriting">Favoriting…</string>
    <string name="favorite_failed">Favorite failed</string>
    <string name="retweeting">Retweeting…</string>
    <string name="retweet_failed">Retweet failed</string>
    <string name="shown_upload_picture_services">Shown upload picture services</string>
    <string name="preference">Preference</string>
    <string name="theme">Theme</string>
    <string name="will_not_apply_soon">Will not apply soon.</string>
    <string name="detail">Detail</string>
    <string name="the_userstream_event_is_not_found">The UserStream event is not found.</string>
    <string name="getting_tweet">Getting tweet…</string>
    <string name="getting_direct_message">Getting direct message…</string>
    <string name="couldnt_get_tweet">Couldn\'t get tweet</string>
    <string name="couldnt_get_direct_message">Couldn\'t get direct message</string>
    <string name="expanding">Expanding…</string>
    <string name="maybe_dangerous_site">Maybe dangerous site!</string>
    <string name="want_to_favorite">Want to favorite?</string>
    <string name="want_to_retweet">Want to retweet?</string>
    <string name="reply">Reply</string>
    <string name="quote">Quote</string>
    <string name="favorite">Favorite</string>
    <string name="retweet">Retweet</string>
    <string name="cook">Cook</string>
    <string name="share">Share</string>

</resources>