<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_reply_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reply_to"
            android:layout_marginRight="2sp" />
        <TextView
            android:id="@+id/tv_update_status_reply_to_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_data" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_marginRight="2sp" />
        <TextView
            android:id="@+id/tv_update_status_reply_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_data" />

    </LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">

	    <net.azyobuzi.azyotter.saostar.widget.AccountSelector
            android:id="@+id/as_update_status"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"/>
	    <EditText
	        android:id="@+id/txt_update_status_status"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginTop="15dp"
	        android:ems="10"
	        android:hint="@string/whats_happening"
	        android:inputType="textMultiLine" >

	        <requestFocus />
	    </EditText>

	</LinearLayout>

</LinearLayout>